roles/clickhouse/templates/clickhouse-cluster/clickhouse-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clickhouse
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: clickhouse.svc.plus
    http:
      paths:
      - backend:
          service:
            name: clickhouse-service
            port:
              number: 8123
        path: /
        pathType: Prefix
